<resources>
    <string name="example" translatable="false">10 + 5 = ?</string>
    <string name="button_answer">Answer</string>
    <string name="input_answer">Input answer</string>
    <string name="sorry_answer_is_incorrect">Sorry, answer is incorrect</string>
    <string name="correct_answer">You are right</string>
    <string name="app_name">Сheck how you calculate</string>
    <string name="next">Next</string>
</resources>